// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Component > renders with default props and styles 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5rem;
  width: 100%;
  max-width: 10.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 0.25rem;
  gap: 0.44rem;
  border-radius: 0.75rem;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 0.875rem;
}

<span
  class="emotion-0"
  data-testid="notr-pill"
  style="background-color: rgba(9, 196, 151, 0.2); color: rgb(9, 196, 151); --color-green-400: #09c49733; --color-green-600: #09c497;"
>
   
  3
   task
  s
   
  Completed
</span>
`;

exports[`Button Component > renders with icon props and styles 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5rem;
  width: 100%;
  max-width: 10.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 0.25rem;
  gap: 0.44rem;
  border-radius: 0.75rem;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 0.875rem;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5rem;
  width: 100%;
  max-width: 10.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 0.25rem;
  gap: 0.44rem;
  border-radius: 0.75rem;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 0.875rem;
}

<span
  class="emotion-0"
  data-testid="notr-pill"
  style="background-color: rgba(9, 196, 151, 0.2); color: rgb(9, 196, 151); --color-green-400: #09c49733; --color-green-600: #09c497;"
>
  <svg
    class="mni mni-check-square"
    color="currentColor"
    fill="none"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M3.75 9c0-2.886 2.364-5.25 5.25-5.25h6c2.886 0 5.25 2.364 5.25 5.25v6c0 2.886-2.364 5.25-5.25 5.25H9c-2.886 0-5.25-2.364-5.25-5.25zM9 2.25C5.286 2.25 2.25 5.286 2.25 9v6c0 3.714 3.036 6.75 6.75 6.75h6c3.714 0 6.75-3.036 6.75-6.75V9c0-3.714-3.036-6.75-6.75-6.75zm7.425 7.585a.75.75 0 0 0-1.05-1.07l-5.038 4.943-1.743-2.265a.75.75 0 1 0-1.188.914l2.03 2.639.034.034c.181.182.46.37.83.37.367 0 .645-.186.827-.367z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
   
  3
   task
  s
   
  Completed
</span>
`;
